--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "displayName": "ai-pdlc-plugin",
   "description": "AI PDLC Plugin",
   "version": "0.0.1",
-  "engines": { "vscode": "^1.99.0" },
-  "categories": ["Other"],
-
+  "engines": {
+    "vscode": "^1.99.0"
+  },
+  "categories": [
+    "Other"
+  ],
   "activationEvents": [
     "onView:aiPdlcChatView",
     "onStartupFinished"
   ],
-
   "main": "./dist/extension.js",
-
   "contributes": {
     "viewsContainers": {
       "activitybar": [
@@ -23,7 +24,6 @@
         }
       ]
     },
-
     "views": {
       "aiPdlcChatContainer": [
         {
@@ -34,27 +34,25 @@
         }
       ]
     },
-
     "menus": {
       "view/title": [
         {
           "command": "aiPdlc.newSession",
           "when": "view == aiPdlcChatView",
-          "group": "navigation"
+          "group": "navigation@1"
         },
         {
-          "command": "aiPdlc.toggleFullScreen",
+          "command": "aiPdlc.chatList",
           "when": "view == aiPdlcChatView",
-          "group": "navigation"
+          "group": "navigation@2"
         },
         {
           "command": "aiPdlc.openSettings",
           "when": "view == aiPdlcChatView",
-          "group": "navigation"
+          "group": "navigation@3"
         }
       ]
     },
-
     "commands": [
       {
         "command": "aiPdlc.newSession",
@@ -63,9 +61,9 @@
         "group": "GigaStudio"
       },
       {
-        "command": "aiPdlc.toggleFullScreen",
-        "title": "Open in new window",
-        "icon": "$(link-external)",
+        "command": "aiPdlc.chatList",
+        "title": "Recent projects",
+        "icon": "$(list-flat)",
         "group": "GigaStudio"
       },
       {
@@ -97,6 +95,7 @@
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.99.1",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "@vscode/test-cli": "^0.0.10",
@@ -104,12 +103,11 @@
     "esbuild": "^0.25.1",
     "eslint": "^9.23.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vscode": "^1.1.37"
   },
   "dependencies": {
-    "@types/vscode": "^1.99.1",
-    "react": "^19.1.0",
-    "vscode": "^1.1.37"
+    "react": "^19.1.0"
   },
   "overrides": {
     "minimatch": "^3.0.5",
