--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,16 @@
 {
 	"compilerOptions": {
-		// target modern Node/Electron environment
 		"module": "Node16",
-		"moduleResolution": "Node16",       // ← must match "module" when using Node16 :contentReference[oaicite:0]{index=0}
 		"target": "ES2022",
 		"lib": ["ES2022"],
-
-		// source maps for debugging
 		"sourceMap": true,
-
-		// your source and output
 		"rootDir": "src",
-		"outDir": "dist",
-
-		// strict type-checking
-		"strict": true,
-
-		// node module resolution, interoperability
-		"esModuleInterop": true,
-		"resolveJsonModule": true,
-
-		// only pull in Node and VS Code extension API types
-		"types": ["node", "vscode"],
-
-		// ignore mismatches in external declaration files
-		"skipLibCheck": true
+		"strict": true
+		/* Additional Checks
+        // "noImplicitReturns": true,
+        // "noFallthroughCasesInSwitch": true,
+        // "noUnusedParameters": true,
+        */
 	},
 	"include": ["src"],
 	"exclude": [
